<resources>

    <string name="app_name" translatable="false">MyExpenses</string>
    <string name="dev_1" translatable="false">Rafael Tavares Carvalho Barros</string>
    <string name="dev_2" translatable="false">Ricardo Hideki Adati Tomomitsu</string>
    <string name="menu_cabecalho_nome" translatable="false">MyExpenses</string>
    <string name="menu_cabecalho_descricao"></string>

    <string name="navigation_drawer_open">Abrir menu</string>
    <string name="navigation_drawer_close">Fechar menu</string>

    <string name="menu_grupo_gerenciar">Gerenciar</string>
    <string name="menu_grupo_graficos">Gráficos</string>
    <string name="menu_grupo_relatorio">Relatório</string>
    <string name="menu_categoria">Categorias</string>
    <string name="menu_despesa">Despesas</string>
    <string name="menu_grafico_donut">Por Categoria</string>
    <string name="menu_salvar_relatorio">Salvar Relatório</string>

    <string name="titulo_tela_categorias">Gerenciar Categorias</string>
    <string name="titulo_tela_despesas">Gerenciar Despesas</string>
    <string name="titulo_tela_donut">Gráfico por Categoria</string>
    <string name="titulo_tela_idioma">Idioma</string>
    <string name="titulo_tela_sobre">Sobre</string>
    <string name="titulo_tela_salvar_relatorio">Salvar Relatório</string>

    <string name="categoria">Categoria</string>

    <string name="btn_filtro_30dias">30 Dias</string>
    <string name="btn_filtro_mes">Mês</string>
    <string name="btn_filtro_ano">Ano</string>
    <string name="btn_filtro_sempre">Sempre</string>
    <string name="data_inicio">Data de Início</string>
    <string name="data_fim">Data Final</string>

    <string name="grafico_linhas_geral">Geral</string>

    <string name="opcao_idioma">Idioma</string>
    <string name="opcao_sobre">Sobre</string>

    <string name="desenvolvido_por">Desenvolvido por</string>

    <string name="idioma_trocado">O idioma foi alterado</string>

    <string name="outras">Outras</string>
    <string name="nenhuma_despesa_cadastrada">Nenhuma despesa cadastrada no período</string>

    <string name="informe_categoria">Informe o nome da categoria!</string>
    <string name="categoria_cadastrada">Categoria cadastrada com sucesso</string>
    <string name="categoria_excluida">Categoria excluída</string>
    <string name="nome_alterado">Nome alterado</string>
    <string name="informe_valor">Informe o valor!</string>
    <string name="despesa_cadastrada">Despesa cadastrada com sucesso</string>
    <string name="despesa_excluida">Despesa excluída</string>

    <string name="excluir_categoria">Você deseja excluir esta categoria? Todas despesas desta categoria serão excluídas</string>
    <string name="excluir_despesa">Você deseja excluir esta despesa?</string>
    <string name="excluir">Excluir</string>
    <string name="cancelar">Cancelar</string>

    <string name="salvar_relatorio">Salvar Relatório</string>
    <string name="salvar">Salvar</string>
    <string name="relatorio_sucesso">Relatório salvo com sucesso</string>
    <string name="erro_relatorio_vazio">Nenhuma despesa foi cadastrada neste período</string>
</resources>
