<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/menu_grupo_gerenciar">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_categoria"
                    android:icon="@drawable/ic_toc_black_24dp"
                    android:title="@string/menu_categoria" />
                <item
                    android:id="@+id/menu_despesa"
                    android:icon="@drawable/ic_action_attach_money"
                    android:title="@string/menu_despesa" />
            </group>
        </menu>
    </item>

    <item android:title="@string/menu_grupo_graficos">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_grafico_donut"
                    android:icon="@drawable/ic_donut_large_black_24dp"
                    android:title="@string/menu_grafico_donut" />
                <item
                    android:id="@+id/menu_grafico_linha"
                    android:icon="@drawable/ic_timeline_black_24dp"
                    android:title="@string/menu_grafico_linha" />
            </group>
        </menu>
    </item>

</menu>
