<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_filtro_30dias"
            android:id="@+id/btnFiltro30Dias"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_filtro_mes"
            android:id="@+id/btnFiltroMes"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_filtro_ano"
            android:id="@+id/btnFiltroAno"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_filtro_sempre"
            android:id="@+id/btnFiltroSempre"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">
        <EditText
            android:id="@+id/edttxt_data_inicio"
            android:layout_width="@dimen/filtros_datepicker_width"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:inputType="none"
            android:hint="@string/data_inicio"
            android:layout_marginRight="@dimen/filtros_margin_entre_datepickers"
            android:focusable="false"
            android:gravity="center_horizontal"/>
        <EditText
            android:id="@+id/edttxt_data_fim"
            android:layout_width="@dimen/filtros_datepicker_width"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:inputType="none"
            android:hint="@string/data_fim"
            android:focusable="false"
            android:gravity="center_horizontal"/>
    </LinearLayout>
</LinearLayout>
