<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/margin_pequena_grude"
    android:paddingTop="@dimen/fragment_padding_top">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/desenvolvido_por"
        android:textStyle="bold"
        android:textSize="18dp"
        android:paddingBottom="@dimen/margin_media_grude"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dev_1"
        android:textSize="16dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dev_2"
        android:textSize="16dp"/>
</LinearLayout>
